test/classes/initializers/errors/bothGeneric-lhsConsRhsInit.good
bothGeneric-lhsConsRhsInit.chpl:20: error: type mismatch in assignment from hasInit(int(64)) to hasConstruct(int(64))
